# Skintelli

./: .gitignore  CHANGELOG.md  CODE_EXAMPLES.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_NOTES.md  QUICK_START.md  README.md  README_SKINTELLI.md  pyproject.toml  users.db  users.json
desktop/: AUTHENTICATION_FIX.md  MODEL_INTEGRATION.md  download_model.py  requirements.txt  run.py  test_auth.py
desktop/data/: medical_knowledge_base.json
desktop/src/: main.py
desktop/src/core/: agent.py  auth.py  detection.py  explainability.py  interpretation.py  skin_analyzer.py  usage_tracker.py  utils.py
desktop/src/database/: models.py
desktop/src/ui/: dialogs.py  main_window.py  main_window_new.py  model_dashboard.py
desktop/src/ui/widgets/: dual_panel.py
documents/: businesscanvas-activity5.docx  musakn fypactivity 1-4.docx
history/prompts/002-skin-disease-detection/: 001-create-spec-for-skin-disease-detection.spec.prompt.md  002-create-development-plan-for-skin-disease-detection.plan.prompt.md  003-create-task-list-for-skin-disease-detection.tasks.prompt.md
history/prompts/constitution/: PHR-001-skintelli-initial-constitution.prompt.md
specs/001-skin-disease-detection/: plan.md  spec.md
specs/001-skin-disease-detection/checklists/: requirements.md
specs/002-skin-disease-detection/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-skin-disease-detection/checklists/: requirements.md
