[project]
name = "fyp-1"
version = "0.1.0"
description = "Desktop application for offline skin disease screening with Explainable AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.50.0",
    "streamlit-option-menu>=0.4.0",
    "torch",
    "ultralytics",
    "opencv-python",
    "faiss-cpu",
    "llama-cpp-python",
]

[tool.setuptools.packages.find]
where = ["src"]

